--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,23 @@
 
     <string name="app_name">AdoptMe</string>
     <string name="title_pet_detail">Pet Detail</string>
+    <string name="title_activity_ripples">RipplesActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="press_me">Press Me!</string>
+    <string name="btn_property_animation">Property Animation</string>
+    <string name="title_activity_property_anim">PropertyAnimActivity</string>
+    <string name="wheel">Steering Wheel</string>
+    <string name="ground">The Ground</string>
+    <string name="window">Window Frame</string>
+    <string name="sun">The Sun</string>
+    <string name="cloud">A Cloud</string>
+    <string name="title_activity_tween">TweenActivity</string>
+    <string name="rotate_String" >Clockwise/Anti Clockwise</string>
+    <string name="zoom_In_Out">Zoom In/Out</string>
+    <string name="fade_String">Fade In/Out</string>
+    <string name="btn_tween">Tween Animation</string>
+    <string name="AnimWidget">AnimButton</string>
 
 </resources>
